Changed the way I work with the GSheetApi, Added Borrowings and Users