@@ -2,6 +2,8 @@ package io.github.clooooud.barbcd.gui.scenes;
 
 import io.github.clooooud.barbcd.BarBCD;
 import javafx.scene.control.Button;
+import javafx.scene.control.TextInputControl;
+import javafx.scene.layout.HBox;
 
 import java.util.Collections;
 import java.util.List;
@@ -10,6 +12,15 @@ public class AuthScene extends FormScene {
 
     public AuthScene(BarBCD app) {
         super(app);
+    }
+
+    @Override
+    public HBox getHeader() {
+        HBox header = super.getHeader();
+
+        getAuthButton().setOnAction((event) -> getFields().forEach(TextInputControl::clear));
+
+        return header;
     }
 
     @Override
@@ -30,7 +41,7 @@ public class AuthScene extends FormScene {
 
     @Override
     protected List<String> getFieldNames() {
-        return Collections.singletonList("Mot de passe");
+        return List.of("Utilisateur", "Mot de passe");
     }
 
     @Override
